changed a link on first page

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,5 +4,5 @@ index.file=public/index.php
 remote.connection=home_server-c7d2ab
 remote.directory=/jonasulveseth-news
 remote.upload=ON_SAVE
-run.as=REMOTE
+run.as=LOCAL
 url=http://localhost/jonasulvesethnews/public
